util.css
/* ... */
/*GRID*/
.debug, .debug * {
  border: 0.2em solid #f00 !important;
}
.grid\-x.debug, .grid\-y.debug, .debug .grid\-x, .debug .grid\-y {
  border: 0.2em solid #00f !important;
}
.cell.debug, .debug .cell {
  border: 0.2em solid #0ff !important;
}

.grid\-x            { display: flex; flex-direction: row; flex-wrap: wrap; width: auto; height: auto; max-width: 100%; max-height: 100%; overflow: auto; }
.grid\-y            { display: flex; flex-direction: column; flex-wrap: wrap; width: auto; height: auto; max-width: 100%; max-height: 100%; overflow: auto; }

.grid\-x.\-frame    { width: 100vw; }
.grid\-x.\-reverse  { flex-direction: row-reverse; }

.grid\-y.\-frame    { height: 100vh; }
.grid\-y.\-reverse  { flex-direction: column-reverse; }

.grid\-x.\-overflow, .grid\-y.\-overflow           { overflow: visible; max-width: none; max-height: none; }

.grid\-x.\-wrap, .grid\-y.\-wrap                   { flex-wrap: wrap; }
.grid\-x.\-nowrap, .grid\-y.\-nowrap               { flex-wrap: nowrap; }
.grid\-x.\-wrap\-reverse, .grid\-y.\-wrap\-reverse { flex-wrap: wrap-reverse; }

.grid\-x.\-left, .grid\-y.\-left         { justify-content: flex-start; }
.grid\-x.\-center, .grid\-y.\-center     { justify-content: center; }
.grid\-x.\-right, .grid\-y.\-right       { justify-content: flex-end; }
.grid\-x.\-between, .grid\-y.\-between   { justify-content: space-between; }
.grid\-x.\-around, .grid\-y.\-around     { justify-content: space-around; }

.grid\-x.\-top, .grid\-y.\-top           { align-items: flex-start; }
.grid\-x.\-middle, .grid\-y.\-middle     { align-items: center; }
.grid\-x.\-bottom, .grid\-y.\-bottom     { align-items: flex-end; }
.grid\-x.\-stretch, .grid\-y.\-stretch   { align-items: stretch; }
.grid\-x.\-baseline, .grid\-y.\-baseline { align-items: baseline; }

.cell                  { display: block; width: auto; height: auto; max-width: 100%; max-height: 100%; flex-shrink: 0; flex-grow: 0; flex-basis: auto; overflow: auto; }

.cell.\-overflow       { overflow: visible; max-width: none; max-height: none; }

.grid\-x>.cell.\-frame { height: 100vh; }
.grid\-x>.cell.\-auto  { width: auto; flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-fill  { width: auto; flex-grow: 1; flex-basis: 0; }
.grid\-x>.cell.\-0     { width: 0; flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-1     { width: calc(-0.1px + 100% * 1 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-2     { width: calc(-0.1px + 100% * 2 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-3     { width: calc(-0.1px + 100% * 3 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-4     { width: calc(-0.1px + 100% * 4 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-5     { width: calc(-0.1px + 100% * 5 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-6     { width: calc(-0.1px + 100% * 6 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-7     { width: calc(-0.1px + 100% * 7 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-8     { width: calc(-0.1px + 100% * 8 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-9     { width: calc(-0.1px + 100% * 9 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-10    { width: calc(-0.1px + 100% * 10 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-11    { width: calc(-0.1px + 100% * 11 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-x>.cell.\-12    { width: 100%; flex-grow: 0; flex-basis: auto; }

.grid\-y>.cell.\-frame { width: 100vw; }
.grid\-y>.cell.\-auto  { height: auto; flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-fill  { height: auto; flex-grow: 1; flex-basis: 0; }
.grid\-y>.cell.\-0     { height: 0; flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-1     { height: calc(-0.1px + 100% * 1 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-2     { height: calc(-0.1px + 100% * 2 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-3     { height: calc(-0.1px + 100% * 3 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-4     { height: calc(-0.1px + 100% * 4 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-5     { height: calc(-0.1px + 100% * 5 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-6     { height: calc(-0.1px + 100% * 6 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-7     { height: calc(-0.1px + 100% * 7 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-8     { height: calc(-0.1px + 100% * 8 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-9     { height: calc(-0.1px + 100% * 9 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-10    { height: calc(-0.1px + 100% * 10 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-11    { height: calc(-0.1px + 100% * 11 / 12); flex-grow: 0; flex-basis: auto; }
.grid\-y>.cell.\-12    { height: 100%; flex-grow: 0; flex-basis: auto; }

.grid\-x>.cell.\-push\-0, .grid\-x.\-reverse>.cell.\-pull\-0    { margin-left: 0; }
.grid\-x>.cell.\-push\-1, .grid\-x.\-reverse>.cell.\-pull\-1    { margin-left: calc(-0.1px + 100% * 1 / 12); }
.grid\-x>.cell.\-push\-2, .grid\-x.\-reverse>.cell.\-pull\-2    { margin-left: calc(-0.1px + 100% * 2 / 12); }
.grid\-x>.cell.\-push\-3, .grid\-x.\-reverse>.cell.\-pull\-3    { margin-left: calc(-0.1px + 100% * 3 / 12); }
.grid\-x>.cell.\-push\-4, .grid\-x.\-reverse>.cell.\-pull\-4    { margin-left: calc(-0.1px + 100% * 4 / 12); }
.grid\-x>.cell.\-push\-5, .grid\-x.\-reverse>.cell.\-pull\-5    { margin-left: calc(-0.1px + 100% * 5 / 12); }
.grid\-x>.cell.\-push\-6, .grid\-x.\-reverse>.cell.\-pull\-6    { margin-left: calc(-0.1px + 100% * 6 / 12); }
.grid\-x>.cell.\-push\-7, .grid\-x.\-reverse>.cell.\-pull\-7    { margin-left: calc(-0.1px + 100% * 7 / 12); }
.grid\-x>.cell.\-push\-8, .grid\-x.\-reverse>.cell.\-pull\-8    { margin-left: calc(-0.1px + 100% * 8 / 12); }
.grid\-x>.cell.\-push\-9, .grid\-x.\-reverse>.cell.\-pull\-9    { margin-left: calc(-0.1px + 100% * 9 / 12); }
/* ... */

